[package]
name = "async_counter"
version = "0.1.0"
edition = "2021"
authors = [
    "Victor Ermolaev <victorermolaev@gmail.com>",
]
repository = "https://github.com/yewstack/yew"
homepage = "https://yew.rs"
documentation = "https://docs.rs/yew/"
license = "MIT OR Apache-2.0"
keywords = ["future", "counter"]
description = "Counter that implements a future to await on specific value. "
readme = "README.md"


[dependencies]

[dev-dependencies]
tokio = { version = "1.35.1", features = ["rt", "macros", "time"] }
log = "0.4.20"
pretty_env_logger = "0.5.0"